--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -2,3 +2,7 @@
     type = "git-repo"
     url = "https://github.com/dexpota/kitty-themes.git"
     refreshPeriod = "168h"
+[".config/tmux/plugins/tpm"]
+    type = "git-repo"
+    url = "https://github.com/tmux-plugins/tpm.git"
+    refreshPeriod = "168h"
