--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -26,7 +26,7 @@ font_family      JetBrainsMone Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 16.0
 
 #: Font size (in pts).
 
@@ -390,7 +390,7 @@ cursor_shape block
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait -1
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
