--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMone Nerd Font
+font_family      JetBrainsMono Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -26,7 +26,7 @@ font_family      JetBrainsMone Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 13.0
 
 #: Font size (in pts).
 
