--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,77 +1,77 @@
 # enable 256 color mode
-    #set -g default-terminal "screen-256color"
-    #set -sa terminal-features ',xterm-kitty:RGB'
-    #set -g default-terminal screen-256color
-    #set -ag terminal-overrides ",xterm-256color:Tc"
-    set-option -sa terminal-features ',xterm-kitty:RGB'
-    set-option -ga terminal-overrides ',xterm-kitty:Tc'
+  # set -g default-terminal 'screen-256color'
+  set -sa terminal-features ',xterm-kitty:RGB'
+  set -ga terminal-overrides ',xterm-kitty:Tc'
 
 # no delay after <esc>
-    set -sg escape-time 0
+  set -sg escape-time 0
 
 # remap default prefix key
-    unbind C-b
-    set -g prefix C-s
-    bind C-s send-prefix
+  unbind C-b
+  set -g prefix C-s
+  bind C-s send-prefix
 
 # start counting windows and panes from 1 instead of 0
-    set -g base-index 1
-    set -g pane-base-index 1
+  set -g base-index 1
+  set -g pane-base-index 1
 
-#### keybindings ####
-bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf" \; display "TMUX config reloaded"
+#### keybindings
+# general
+  bind r source-file '$XDG_CONFIG_HOME/tmux/tmux.conf' \; display 'TMUX config reloaded'
 
 # quickly open a new windows in current pane path
-# (C-N for convenience since my pinky somethines is too lazy to get off CTRL in time ...)
-bind n new-window -c "#{pane_current_path}"
-bind C-n new-window -c "#{pane_current_path}"
+# (C-N for convenience since my pinky sometimes is too lazy to get off CTRL in time ...)
+  bind n new-window -c '#{pane_current_path}'
+  bind C-n new-window -c '#{pane_current_path}'
 
 # split panes
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-# sync all panes in a window
-bind y setw synchronize-panes
+# vertical
+  bind '"'  split-window -v -c '#{pane_current_path}'
+  bind -    split-window -v -c '#{pane_current_path}'
+  bind _    split-window -v -c '#{pane_current_path}'
+  bind C--  split-window -v -c '#{pane_current_path}'
+# horizontal
+  bind %    split-window -h -c '#{pane_current_path}'
+  bind |    split-window -h -c '#{pane_current_path}'
+  bind \\   split-window -h -c '#{pane_current_path}'
+  bind C-\\ split-window -h -c '#{pane_current_path}'
 
 # pane movement shortcuts (same as vim)
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+  bind h select-pane -L
+  bind j select-pane -D
+  bind k select-pane -U
+  bind l select-pane -R
 
-# synchronize all panes toggle
-bind -n C-x setw synchronize-panes
+# sync all panes in a window
+  bind y   setw synchronize-panes \; display 'Sync #{?synchronize-panes,ON,OFF}'
+  bind C-x setw synchronize-panes \; display 'Sync #{?synchronize-panes,ON,OFF}'
 
 # select layouts
-bind -n M-m select-layout main-vertical
-bind -n M-M select-layout main-horizontal
-bind -n M-E select-layout even-vertical
-bind -n M-e select-layout even-horizontal
-bind -n M-t select-layout tiled
+  bind -n M-m select-layout main-vertical
+  bind -n M-M select-layout main-horizontal
+  bind -n M-E select-layout even-vertical
+  bind -n M-e select-layout even-horizontal
+  bind -n M-t select-layout tiled
 
 # enable mouse support for switching panes/windows
-#set -g mouse-utf8 on
-set -g mouse on
+  set -g mouse on
 
-#### copy mode : vim ####
-
-# set vi mode for copy mode
-setw -g mode-keys vi
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-#bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel
-
-# copy mode using 'Esc'
-unbind [
-bind Escape copy-mode
+# vim-style copy mode
+  setw -g mode-keys vi
+  bind -T copy-mode-vi v send -X begin-selection
+  bind -T copy-mode-vi V send -X select-line
+  bind -T copy-mode-vi y send -X copy-pipe-and-cancel
+  # use ESC to enter copy-mode instead of [
+  unbind [
+  bind Escape copy-mode
+  # use p to paste ]
+  unbind ]
+  bind p paste-buffer
 
 # start selection with 'space' and copy using 'y'
-# bind -t vi-copy 'y' copy-selection
+  #bind -T vi-copy 'y' copy-selection
 
 # paste using 'p'
-# unbind p
-# bind p paste-buffer
 
 #### plugins ####
 set -g @plugin 'egel/tmux-gruvbox'
@@ -81,4 +81,4 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @tmux-gruvbox 'dark' # 'dark' or 'light'
 
-run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
