--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -17,7 +17,7 @@
 
 #### keybindings
 # general
-  bind r source-file '$XDG_CONFIG_HOME/tmux/tmux.conf' \; display 'TMUX config reloaded'
+  bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'TMUX config reloaded'
 
 # quickly open a new windows in current pane path
 # (C-N for convenience since my pinky sometimes is too lazy to get off CTRL in time ...)
@@ -78,6 +78,7 @@ set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @tmux-gruvbox 'dark' # 'dark' or 'light'
 
