--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # enable 256 color mode
   # set -g default-terminal 'screen-256color'
-  set -sa terminal-features ',xterm-kitty:RGB'
-  set -ga terminal-overrides ',xterm-kitty:Tc'
+  #set -sa terminal-features ',xterm-kitty:RGB'
+  #set -ga terminal-overrides ',xterm-kitty:Tc'
 
 # no delay after <esc>
   set -sg escape-time 0
